--- a/src/index.css
+++ b/src/index.css
@@ -34,11 +34,12 @@ html{
 }
 
 .content-div:hover{
-    background-image: linear-gradient(
+    /* background-image: linear-gradient(
         to right,
         #3399ff,
         #b3d6ff
-    ) !important;
+    ) !important; */
+    background-image: linear-gradient(180deg, #B6CCF5 0.48%, #D5E3F1 100%) !important;
 } 
 /* .content-div:hover{
     background-image:linear-gradient(
@@ -124,7 +125,7 @@ html{
 }
 
 .custom-shape-divider-bottom-1666375306 .shape-fill {
-    fill: #000000;
+    fill: #06223F;
 }
 
 /* .custom-shape-divider-bottom-1666375929 {
