--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 /* colors: 
 dark(black) : slate-900
@@ -13,11 +14,14 @@ black,white,purple-500,neutral-400
 */
 html{
     scroll-behavior: smooth;
+    font-size: 16px;
 }
 
 @layer base{
     body{
-        @apply font-[Ubuntu];
+        /* @apply font-sans bg-white text-black; */
+        font-family: 'Inter', sans-serif;
+        font-weight: 300;
     }
     li{
         @apply px-4;
@@ -48,91 +52,16 @@ html{
     /* background-image: linear-gradient(180deg, #B6CCF5 0.48%, #D5E3F1 100%) !important; */
 } 
 /* .content-div:hover{
-    background-image:linear-gradient(
+    background-image: linear-gradient(
         to right,
         #55aaff,
         #55aaff
     )!important;
 } */
 
-.logo,.foot{
-    font-family: 'Sriracha', cursive !important;
-}
-
-.boxshadow{
-    box-shadow: rgba(255, 255, 255, 0.24) 0px 5px 15px;
-}
-
-/* .post{
-    transition: 1s ease;
-}
-.post:hover{
-    backdrop-filter: blur(10px);
-    filter: blur(4px);
-    transition: 0.5s ease;
-} */
 /* Home waves */
-.custom-shape-divider-bottom-1666373256 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-}
-
-.custom-shape-divider-bottom-1666373256 svg {
-    position: relative;
-    display: block;
-    width: calc(145% + 1.3px);
-    height: 285px;
-}
-
-.custom-shape-divider-bottom-1666373256 .shape-fill {
-    fill: #B3D6FF;
-}
-
 /* Experience waves */
-.custom-shape-divider-bottom-1666374861 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-}
-
-.custom-shape-divider-bottom-1666374861 svg {
-    position: relative;
-    display: block;
-    width: calc(300% + 1.3px);
-    height: 500px;
-}
-
-.custom-shape-divider-bottom-1666374861 .shape-fill {
-    fill: #B3D6FF;
-}
-
 /* contact waves */
-.custom-shape-divider-bottom-1666375306 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-}
-
-.custom-shape-divider-bottom-1666375306 svg {
-    position: relative;
-    display: block;
-    width: calc(136% + 1.3px);
-    height: 500px;
-}
-
-.custom-shape-divider-bottom-1666375306 .shape-fill {
-    fill: #0e1111;
-}
 
 /* .custom-shape-divider-bottom-1666375929 {
     position: absolute;
@@ -156,24 +85,14 @@ html{
     fill: #B3D6FF;
 } */
 
-  .icon-style{
-    background-color: #18ffb0;
-    /* border: 2px solid #fff; */
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-    color: #fff;
-    cursor: pointer;
-    animation: movebtn 3s ease-in-out infinite;
-    transition: all .5s ease-in-out;
-  }
-  .icon-style:hover{
-    animation: none;
-    background: #fff;
-    color: #18ffb0;
-    border: 2px solid #18ffb0;
-  }
+.section-title {
+  @apply text-3xl font-semibold text-black mb-6;
+}
 
-  .gradient-bg{
-    background-image: linear-gradient(to bottom left, #2cf8ff 0%, black 35%);
-  }
+.link-arrow {
+  @apply inline-flex items-center text-sm text-primary hover:underline;
+}
+
+.logo {
+  font-family: 'Sriracha', cursive !important;
+}
